Added basic functionality

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
-﻿@{
+﻿@model IEnumerable<Post>
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<header class="masthead" style="background-image: url('/images/background.jpg')">
+    <div class="container position-relative px-4 px-lg-5">
+        <div class="row gx-4 gx-lg-5 justify-content-center">
+            <div class="col-md-10 col-lg-8 col-xl-7">
+                <div class="site-heading">
+                    <h1>GGJ Barcelona</h1>
+                    <span class="subheading">Blog oficial per a la Global GameJam BCN @@ UPC</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+
+<div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-10 col-lg-8 col-xl-7">
+            @foreach (var post in Model)
+            {
+                <div class="post-preview">
+                    <a asp-area="" asp-controller="Post" asp-action="Details" asp-route-id="@post.Id">
+                        <h2 class="post-title">@post.Title</h2>
+                        @if (post.Subtitle != null)
+                        {
+                            <h3 class="post-subtitle">@post.Subtitle</h3>
+                        }
+                    </a>
+                    <p class="post-meta">
+                        Publicat el dia @post.PublishedOn!.Value.Day/@post.PublishedOn!.Value.Month/@post.PublishedOn!.Value.Year
+                    </p>
+                </div>
+                <hr class="my-4" />
+            }
+            @{
+                string? pageNumber;
+                try
+                {
+                    pageNumber = Context.Request.Query["page"] == Microsoft.Extensions.Primitives.StringValues.Empty ? "1" : (int.Parse(Context.Request.Query["page"].First()!) + 1).ToString();
+                } catch
+                {
+                    pageNumber = "1";
+                }
+            }
+            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" asp-area="" asp-controller="Home" asp-action="Index" asp-route-page="@pageNumber">Publicacions anteriors →</a></div>
+        </div>
+    </div>
 </div>
