New theme overhaul

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Home Page";
 }
 
-<header class="masthead" style="background-image: url('/images/background.jpg')">
+<header class="masthead" style="
+background: radial-gradient(circle, rgba(227,23,162,1) 0%, rgba(137,43,130,0.8) 16%, rgba(49,22,90,0.7) 38%, rgba(11,24,40,0.4) 75%, rgba(13,34,59,0.2) 100%); ">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <h1>GGJ Barcelona</h1>
+                    <img class="w-50 floating" src="/images/gamejam.png" />
+                    <h1 style="font-family:'Chalk_Mark'">GGJ Barcelona</h1>
                     <span class="subheading">Blog oficial per a la Global GameJam BCN @@ UPC</span>
                 </div>
             </div>
