--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 /*!
-* Start Bootstrap - Clean Blog v6.0.8 (https://startbootstrap.com/theme/clean-blog)
+* Based on Start Bootstrap - Clean Blog v6.0.8 (https://startbootstrap.com/theme/clean-blog)
 * Copyright 2013-2022 Start Bootstrap
 * Licensed under MIT (https://github.com/StartBootstrap/startbootstrap-clean-blog/blob/master/LICENSE)
 */
@@ -33,8 +33,9 @@
     --bs-gray-700: #495057;
     --bs-gray-800: #343a40;
     --bs-gray-900: #212529;
-    --bs-primary: #0085A1;
-    --bs-secondary: #6c757d;
+    --bs-primary: deeppink;
+    --bs-primary-dark: #db127f;
+    --bs-secondary: #5275f2;
     --bs-success: #198754;
     --bs-info: #0dcaf0;
     --bs-warning: #ffc107;
@@ -60,8 +61,28 @@
     --bs-body-font-size: 1rem;
     --bs-body-font-weight: 400;
     --bs-body-line-height: 1.5;
-    --bs-body-color: #212529;
-    --bs-body-bg: #fff;
+    --bs-body-color: #f4ebf5;
+    --bs-body-bg: #111122;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0em);
+    }
+
+    50% {
+        transform: translateY(-1em);
+    }
+
+    100% {
+        transform: translateY(0em);
+    }
+}
+
+.floating {
+    animation-name: float;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
 }
 
 *,
@@ -84,6 +105,7 @@ body {
     line-height: var(--bs-body-line-height);
     color: var(--bs-body-color);
     text-align: var(--bs-body-text-align);
+    background: linear-gradient(145deg, rgba(100,16,79,1) 27%, rgba(17,17,34,1) 52%, rgba(17,19,38,1) 70%, rgba(14,49,92,1) 100%);
     background-color: var(--bs-body-bg);
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -240,12 +262,12 @@ sup {
 }
 
 a {
-    color: #212529;
+    color: var(--bs-primary-dark);
     text-decoration: none;
 }
 
     a:hover {
-        color: #0085A1;
+        color: rgba(255, 255, 255, 0.8);
     }
 
     a:not([href]):not([class]), a:not([href]):not([class]):hover {
@@ -291,7 +313,7 @@ kbd {
     padding: 0.2rem 0.4rem;
     font-size: 0.875em;
     color: #fff;
-    background-color: #212529;
+    background-color: #f4ebf5;
 }
 
     kbd kbd {
@@ -4164,10 +4186,15 @@ textarea.form-control-lg {
     list-style: none;
 }
 
+.nav-btn {
+    background-color: var(--bs-primary);
+    color: white;
+}
+
 .nav-link {
     display: block;
     padding: 0.5rem 1rem;
-    color: #212529;
+    color: #f4ebf5;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 
@@ -4311,7 +4338,7 @@ textarea.form-control-lg {
 
 .navbar-collapse {
     flex-basis: 100%;
-    flex-grow: 1;
+    /*flex-grow: 1;*/
     align-items: center;
 }
 
@@ -4738,19 +4765,19 @@ textarea.form-control-lg {
     }
 
 .navbar-light .navbar-brand {
-    color: rgba(0, 0, 0, 0.9);
+    color: #f4ebf5;
 }
 
     .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-        color: rgba(0, 0, 0, 0.9);
+        color: rgba(255, 255, 255, 0.8);
     }
 
 .navbar-light .navbar-nav .nav-link {
-    color: rgba(0, 0, 0, 0.55);
+    color: #f4ebf5;
 }
 
     .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-        color: rgba(0, 0, 0, 0.7);
+        color: rgba(255, 255, 255, 0.8);
     }
 
     .navbar-light .navbar-nav .nav-link.disabled {
@@ -4763,7 +4790,7 @@ textarea.form-control-lg {
     }
 
 .navbar-light .navbar-toggler {
-    color: rgba(0, 0, 0, 0.55);
+    color: #f4ebf5;
     border-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -11626,8 +11653,8 @@ blockquote {
     left: 0;
     right: 0;
     z-index: 1030;
-    border-bottom: 1px solid #dee2e6;
-    background-color: #fff;
+    border-bottom: 1px solid var(--bs-primary);
+    background-color: rgba(33, 34, 59, 0.9);
     font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
@@ -11686,24 +11713,24 @@ blockquote {
             position: fixed;
             top: -83px;
             transition: transform 0.2s;
-            border-bottom: 1px solid white;
-            background-color: rgba(255, 255, 255, 0.9);
+            border-bottom: 1px solid var(--bs-primary);
+            background-color: rgba(33, 34, 59, 0.9);
         }
 
             #mainNav.is-fixed .navbar-brand {
-                color: #212529;
+                color: #f4ebf5;
             }
 
                 #mainNav.is-fixed .navbar-brand:focus, #mainNav.is-fixed .navbar-brand:hover {
-                    color: #0085A1;
+                    color: rgba(255, 255, 255, 0.8);
                 }
 
             #mainNav.is-fixed .navbar-nav > li.nav-item > a {
-                color: #212529;
+                color: #f4ebf5;
             }
 
                 #mainNav.is-fixed .navbar-nav > li.nav-item > a:focus, #mainNav.is-fixed .navbar-nav > li.nav-item > a:hover {
-                    color: #0085A1;
+                    color: rgba(255, 255, 255, 0.8);
                 }
 
         #mainNav.is-visible {
@@ -11736,7 +11763,7 @@ header.masthead {
         right: 0;
         bottom: 0;
         background-color: #212529;
-        opacity: 0.5;
+        opacity: 0.2;
     }
 
     header.masthead .page-heading,
@@ -11796,7 +11823,7 @@ header.masthead {
 
 @media (min-width: 992px) {
     header.masthead {
-        padding-top: 12.5rem;
+        padding-top: 9rem;
         padding-bottom: 12.5rem;
     }
 
@@ -11831,12 +11858,12 @@ header.masthead {
 }
 
 .post-preview > a {
-    color: #212529;
+    color: #d4a9cd;
 }
 
     .post-preview > a:focus, .post-preview > a:hover {
         text-decoration: none;
-        color: #0085A1;
+        color: rgba(180, 178, 214, 0.8);
     }
 
     .post-preview > a > .post-title {
