--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,8 +4,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<header class="masthead" style="
-background: radial-gradient(circle, rgba(227,23,162,1) 0%, rgba(137,43,130,0.8) 16%, rgba(49,22,90,0.7) 38%, rgba(11,24,40,0.4) 75%, rgba(13,34,59,0.2) 100%); ">
+<header id="particles-js" class="homehead">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
@@ -14,6 +13,7 @@ background: radial-gradient(circle, rgba(227,23,162,1) 0%, rgba(137,43,130,0.8) 
                     <h1 style="font-family:'Chalk_Mark'">GGJ Barcelona</h1>
                     <span class="subheading">Blog oficial per a la Global GameJam BCN @@ UPC</span>
                 </div>
+                <h1 id="mainCountdown" class="countdown">--:--:--</h1>
             </div>
         </div>
     </div>
@@ -52,3 +52,9 @@ background: radial-gradient(circle, rgba(227,23,162,1) 0%, rgba(137,43,130,0.8) 
         </div>
     </div>
 </div>
+
+<script>
+    // Minus one because it's monthIndex so january is actually 0
+    const mainDate = new Date(2024, 2 - 1, 3, 17, 0, 0).getTime();
+</script>
+
