--- a/Views/Post/Details.cshtml
+++ b/Views/Post/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = Model.Title;
 }
 
-<header class="masthead" style="background-image: url('/images/background.jpg')">
+<header class="masthead" style="background-image: url('/images/background.jpg');">
     <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
