--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -148,7 +148,6 @@ body {
     line-height: var(--bs-body-line-height);
     color: var(--bs-body-color);
     text-align: var(--bs-body-text-align);
-    background: linear-gradient(145deg, rgba(100,16,79,1) 27%, rgba(17,17,34,1) 52%, rgba(17,19,38,1) 70%, rgba(14,49,92,1) 100%);
     background-color: var(--bs-body-bg);
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -318,6 +317,20 @@ a {
         text-decoration: none;
     }
 
+a.nav-btn {
+    color: #fff;
+    text-decoration: none;
+}
+
+    a.nav-btn:hover {
+        color: rgba(255, 255, 255, 0.8);
+    }
+
+    a.nav-btn:not([href]):not([class]), a:not([href]):not([class]):hover {
+        color: inherit;
+        text-decoration: none;
+    }
+
 pre,
 code,
 kbd,
@@ -423,6 +436,13 @@ textarea {
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+    font-family: Open Sans
+}
+
+input.dark {
+    background: #2225;
+    border: none;
+    color: #eee;
 }
 
 button,
@@ -11986,6 +12006,105 @@ header.homehead {
             font-size: 1.875rem;
         }
 }
+
+
+header.adminhead {
+    position: relative;
+    margin-bottom: 3rem;
+    padding-top: calc(8rem + 57px);
+    padding-bottom: 8rem;
+    background: radial-gradient(circle, rgba(23,159,227,1) 0%, rgba(43,91,137,0.8) 16%, rgba(22,23,90,0.7) 38%, rgba(11,24,40,0.4) 75%, rgba(13,34,59,0.2) 100%);
+    mask-image: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 80%, rgba(0,0,0,0) 100%);
+    -webkit-mask-image: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 80%, rgba(0,0,0,0) 100%);
+}
+
+    header.adminhead:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #212529;
+        opacity: 0.2;
+    }
+
+    header.adminhead .page-heading,
+    header.adminhead .post-heading,
+    header.adminhead .site-heading {
+        color: #fff;
+    }
+
+    header.adminhead .page-heading,
+    header.adminhead .site-heading {
+        text-align: center;
+    }
+
+        header.adminhead .page-heading h1, header.adminhead .page-heading .h1,
+        header.adminhead .site-heading h1,
+        header.adminhead .site-heading .h1 {
+            font-size: 3rem;
+        }
+
+        header.adminhead .page-heading .subheading,
+        header.adminhead .site-heading .subheading {
+            font-size: 1.5rem;
+            font-weight: 300;
+            line-height: 1.1;
+            display: block;
+            margin-top: 0.625rem;
+            font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+        }
+
+    header.adminhead .post-heading h1, header.adminhead .post-heading .h1 {
+        font-size: 2.25rem;
+    }
+
+    header.adminhead .post-heading .meta,
+    header.adminhead .post-heading .subheading {
+        line-height: 1.1;
+        display: block;
+    }
+
+    header.adminhead .post-heading .subheading {
+        font-size: 1.5rem;
+        font-weight: 600;
+        margin: 0.75rem 0 2rem;
+        font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    }
+
+    header.adminhead .post-heading .meta {
+        font-size: 1.25rem;
+        font-weight: 300;
+        font-style: italic;
+        font-family: "Lora", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    }
+
+        header.adminhead .post-heading .meta a {
+            color: #fff;
+        }
+
+@media (min-width: 992px) {
+    header.adminhead {
+        padding-top: 9rem;
+        padding-bottom: 4rem;
+    }
+
+        header.adminhead .page-heading h1, header.adminhead .page-heading .h1,
+        header.adminhead .site-heading h1,
+        header.adminhead .site-heading .h1 {
+            font-size: 5rem;
+        }
+
+        header.adminhead .post-heading h1, header.adminhead .post-heading .h1 {
+            font-size: 3.5rem;
+        }
+
+        header.adminhead .post-heading .subheading {
+            font-size: 1.875rem;
+        }
+}
+
 
 .section-heading {
     font-size: 2.25rem;
