Finish basic auth system and implement post editing.

--- a/Views/Admin/Auth.cshtml
+++ b/Views/Admin/Auth.cshtml
@@ -17,7 +17,7 @@
                         <div class="mb-3">
                             <label asp-for="Password" class="subheading"><strong>Contrasenya:</strong></label>
                             <br />
-                            <input asp-for="Password" class="input-dark" type="password" style="scale: 1.5"/>
+                            <input asp-for="Password" class="input-dark" type="password" style="scale: 1.5" autofocus/>
                         </div>
                         
                         <br />
