--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -49,7 +49,9 @@
                     pageNumber = "1";
                 }
             }
-            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" asp-area="" asp-controller="Home" asp-action="Index" asp-route-page="@pageNumber">Publicacions anteriors →</a></div>
+            <div class="d-flex justify-content-end mb-4">
+                <a class="btn btn-primary text-uppercase" asp-area="" asp-controller="Home" asp-action="Index" asp-route-page="@pageNumber">Publicacions anteriors →</a>
+            </div>
         </div>
     </div>
 </div>
