--- a/Views/Admin/Index.cshtml
+++ b/Views/Admin/Index.cshtml
@@ -50,6 +50,7 @@
                     </a>
                     <p class="post-meta">
                         Publicat el dia @post.PublishedOn!.Value.Day/@post.PublishedOn!.Value.Month/@post.PublishedOn!.Value.Year
+                        <a type="submit" href="/Post/Edit/@post.Id" class="btn btn-secondary float-end mb-4">Edit</a>
                     </p>
                 </div>
                 <hr class="my-4" />
