--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -86,6 +86,14 @@
                                 </span>
                             </a>
                         </li>
+                        <li class="list-inline-item">
+                            <a href="mailto:contacte@gamejambcn.com">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
                     </ul>
                     <div class="small text-center text-muted fst-italic">Copyright &copy; GGJ Barcelona @DateTime.UtcNow.Year</div>
                 </div>
